update molecule playbook to include correct role name :)

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -10,4 +10,4 @@
   tasks:
     - name: "Include ssh-keys"
       include_role:
-        name: "ansible-role-ssh"
+        name: "ansible-role-ssh-keys"
