change local_action to delegate_to: localhost

--- a/tasks/ssh_user.yml
+++ b/tasks/ssh_user.yml
@@ -1,8 +1,10 @@
 ---
 
 - name: stat local "{{ item }}.pub File"
-  local_action: stat path="{{ lookup('first_found', key_search_dirs, errors='warn') }}"
+  stat:
+    path: "{{ lookup('first_found', key_search_dirs, errors='warn') }}"
   register: item_pub
+  delegate_to: localhost
 
 - name: fail if user pubkeyfile does not exist
   fail:
