--- a/meta/main.yml
+++ b/meta/main.yml
@@ -27,17 +27,15 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
-  # - name: SomePlatform
-  #   versions:
-  #   - all
-  #   - 1.0
-  #   - 7
-  #   - 99.99
+  platforms:
+    - name: Debian
+      versions:
+        - 10
+        - 9
+    - name: Ubuntu
+      versions:
+        - 2004
+        - 1809
 
   galaxy_tags: []
   # List tags for your role here, one per line. A tag is a keyword that describes
